# opengl-position-modelling

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  main  main.cpp  test.sh
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  EigenMathematics.cpp  EigenMathematics.h  Timer.cpp  Timer.h
src/gl/: CMakeLists.txt
src/gl-object-renderers/: CMakeLists.txt  Makefile  ObjectRenderer.cpp  ObjectRenderer.h  PlotArea.cpp  PlotArea.h  PlotPath.cpp  PlotPath.h  TrackableObject.cpp  TrackableObject.h
src/gl-renderables/: Cube.h  Cylinder.cpp  Cylinder.h  Grid.cpp  Grid.h  Makefile  Orientation.cpp  Orientation.h  PositionHistory.h  RenderableData.h
src/gl-renderer/: Camera.cpp  Camera.h  GLMathematics.cpp  GLMathematics.h  IndexBuffer.cpp  Makefile  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/gl-renderer/res/shaders/: Basic.shader
src/gl/object-renderers/: ObjectRenderer.cpp  ObjectRenderer.h  TrackableObject.h
src/gl/renderables/: Centroid.h  Cube.cpp  Cube.h  Cylinder.h  Orientation.h  PositionHistory.cpp  PositionHistory.h  RenderableData.cpp
src/gl/renderer/: Camera.cpp  Camera.h  Debug.h  GLMathematics.cpp  GLMathematics.h  IndexBuffer.h  Renderable.cpp  Renderer.cpp  Renderer.h  VertexArray.h  VertexBuffer.h
src/gl/renderer/res/shaders/: Basic.shader
src/modelling/: CMakeLists.txt  GyroSimulator.cpp  GyroSimulator.h  Model.cpp  Model.h  PathPlanner.cpp  PathPlanner.h
src/modelling/sensor-simulators/: AccelerometerSimulator.cpp  AccelerometerSimulator.h  CMakeLists.txt  GyroSimulator.cpp  GyroSimulator.h  PositionSensorSimulator.cpp  PositionSensorSimulator.h  SensorSimulator3D.cpp  SensorSimulator3D.h
tests/: CMakeLists.txt
tests/test-modelling/: AccelerometerSimulatorTest.cpp  AccelerometerSimulatorTest.h  CMakeLists.txt  mockbar.h
